# shiny-opencl

./: .gitignore
HelloWorld/: CMakeLists.txt
HelloWorld/Source/: err_code.h  main.c
